reran build site. shouldn't be any changes

--- a/public/publication/cryptofauna_meps_2011/index.html
+++ b/public/publication/cryptofauna_meps_2011/index.html
@@ -20,7 +20,7 @@
   <meta name="description" content="Coral reef cryptofauna, which live hidden within reef framework structures, are considered to be the most diverse group of coral reef metazoans. They likely comprise more biomass than all surface fauna, providing food sources for fishes and playing important roles as predators, herbivores, detritivores, filter feeders, and scavengers. In an era of global change, it is necessary to determine how these communities are structured across reef habitats as well as to understand how reef framework degradation will impact the cryptofauna and, by extension, ecosystem function. Artificial reef framework units were constructed from coral rubble to approximate framework substrates. Forty replicates were subjected to treatments of differing porosity, flow, and coral cover in a fully crossed ANOVA design. After 2 mo in situ, all motile cryptofauna (&gt;2 mm) were counted, weighed, and identified to the lowest possible level. A total of 11 309 specimens were collected, comprising &gt;121 species from 6 separate phyla. Cryptofaunal abundances and biomass were higher in low-porosity crypts and biomass was greater in slow-flow environments, highlighting the importance of sheltered low-porosity habitats, such as back-reef rubble plains. The presence of live coral was not found to have a significant effect on the motile cryptofauna occupying the dead coral framework below it, suggesting a high degree of resilience in how frameworkdwelling fauna respond to coral mortality. These data support the assertion that artificial reefs are capable of facilitating the accumulation of a diverse cryptic community, independent of live coral, provided they contain suitably porous crypts.">
 
   
-  <link rel="alternate" hreflang="en-us" href="http://www.jamieafflerbach.com/publication/cryptofauna_meps_2011/">
+  <link rel="alternate" hreflang="en-us" href="/publication/cryptofauna_meps_2011/">
 
   
 
@@ -74,15 +74,15 @@
   
 
   
-  <link rel="alternate" href="http://www.jamieafflerbach.com/index.xml" type="application/rss+xml" title="Jamie Afflerbach">
-  <link rel="feed" href="http://www.jamieafflerbach.com/index.xml" type="application/rss+xml" title="Jamie Afflerbach">
+  <link rel="alternate" href="/index.xml" type="application/rss+xml" title="Jamie Afflerbach">
+  <link rel="feed" href="/index.xml" type="application/rss+xml" title="Jamie Afflerbach">
   
 
   <link rel="manifest" href="/site.webmanifest">
   <link rel="icon" type="image/png" href="/img/icon.png">
   <link rel="apple-touch-icon" type="image/png" href="/img/icon-192.png">
 
-  <link rel="canonical" href="http://www.jamieafflerbach.com/publication/cryptofauna_meps_2011/">
+  <link rel="canonical" href="/publication/cryptofauna_meps_2011/">
 
   <meta property="twitter:card" content="summary_large_image">
   
@@ -90,7 +90,7 @@
   <meta property="twitter:creator" content="@jafflerbach">
   
   <meta property="og:site_name" content="Jamie Afflerbach">
-  <meta property="og:url" content="http://www.jamieafflerbach.com/publication/cryptofauna_meps_2011/">
+  <meta property="og:url" content="/publication/cryptofauna_meps_2011/">
   <meta property="og:title" content="Environmental determinants of motile cryptofauna on an eastern Pacific coral reef | Jamie Afflerbach">
   <meta property="og:description" content="Coral reef cryptofauna, which live hidden within reef framework structures, are considered to be the most diverse group of coral reef metazoans. They likely comprise more biomass than all surface fauna, providing food sources for fishes and playing important roles as predators, herbivores, detritivores, filter feeders, and scavengers. In an era of global change, it is necessary to determine how these communities are structured across reef habitats as well as to understand how reef framework degradation will impact the cryptofauna and, by extension, ecosystem function. Artificial reef framework units were constructed from coral rubble to approximate framework substrates. Forty replicates were subjected to treatments of differing porosity, flow, and coral cover in a fully crossed ANOVA design. After 2 mo in situ, all motile cryptofauna (&gt;2 mm) were counted, weighed, and identified to the lowest possible level. A total of 11 309 specimens were collected, comprising &gt;121 species from 6 separate phyla. Cryptofaunal abundances and biomass were higher in low-porosity crypts and biomass was greater in slow-flow environments, highlighting the importance of sheltered low-porosity habitats, such as back-reef rubble plains. The presence of live coral was not found to have a significant effect on the motile cryptofauna occupying the dead coral framework below it, suggesting a high degree of resilience in how frameworkdwelling fauna respond to coral mortality. These data support the assertion that artificial reefs are capable of facilitating the accumulation of a diverse cryptic community, independent of live coral, provided they contain suitably porous crypts.">
   <meta property="og:locale" content="en-us">
@@ -272,35 +272,35 @@
   <ul class="share">
     <li>
       <a class="twitter"
-         href="https://twitter.com/intent/tweet?text=Environmental%20determinants%20of%20motile%20cryptofauna%20on%20an%20eastern%20Pacific%20coral%20reef&amp;url=http%3a%2f%2fwww.jamieafflerbach.com%2fpublication%2fcryptofauna_meps_2011%2f"
+         href="https://twitter.com/intent/tweet?text=Environmental%20determinants%20of%20motile%20cryptofauna%20on%20an%20eastern%20Pacific%20coral%20reef&amp;url=%2fpublication%2fcryptofauna_meps_2011%2f"
          target="_blank" rel="noopener">
         <i class="fa fa-twitter"></i>
       </a>
     </li>
     <li>
       <a class="facebook"
-         href="https://www.facebook.com/sharer.php?u=http%3a%2f%2fwww.jamieafflerbach.com%2fpublication%2fcryptofauna_meps_2011%2f"
+         href="https://www.facebook.com/sharer.php?u=%2fpublication%2fcryptofauna_meps_2011%2f"
          target="_blank" rel="noopener">
         <i class="fa fa-facebook"></i>
       </a>
     </li>
     <li>
       <a class="linkedin"
-         href="https://www.linkedin.com/shareArticle?mini=true&amp;url=http%3a%2f%2fwww.jamieafflerbach.com%2fpublication%2fcryptofauna_meps_2011%2f&amp;title=Environmental%20determinants%20of%20motile%20cryptofauna%20on%20an%20eastern%20Pacific%20coral%20reef"
+         href="https://www.linkedin.com/shareArticle?mini=true&amp;url=%2fpublication%2fcryptofauna_meps_2011%2f&amp;title=Environmental%20determinants%20of%20motile%20cryptofauna%20on%20an%20eastern%20Pacific%20coral%20reef"
          target="_blank" rel="noopener">
         <i class="fa fa-linkedin"></i>
       </a>
     </li>
     <li>
       <a class="weibo"
-         href="http://service.weibo.com/share/share.php?url=http%3a%2f%2fwww.jamieafflerbach.com%2fpublication%2fcryptofauna_meps_2011%2f&amp;title=Environmental%20determinants%20of%20motile%20cryptofauna%20on%20an%20eastern%20Pacific%20coral%20reef"
+         href="http://service.weibo.com/share/share.php?url=%2fpublication%2fcryptofauna_meps_2011%2f&amp;title=Environmental%20determinants%20of%20motile%20cryptofauna%20on%20an%20eastern%20Pacific%20coral%20reef"
          target="_blank" rel="noopener">
         <i class="fa fa-weibo"></i>
       </a>
     </li>
     <li>
       <a class="email"
-         href="mailto:?subject=Environmental%20determinants%20of%20motile%20cryptofauna%20on%20an%20eastern%20Pacific%20coral%20reef&amp;body=http%3a%2f%2fwww.jamieafflerbach.com%2fpublication%2fcryptofauna_meps_2011%2f">
+         href="mailto:?subject=Environmental%20determinants%20of%20motile%20cryptofauna%20on%20an%20eastern%20Pacific%20coral%20reef&amp;body=%2fpublication%2fcryptofauna_meps_2011%2f">
         <i class="fa fa-envelope"></i>
       </a>
     </li>
@@ -388,7 +388,7 @@
 
 
 
-<a class="btn btn-primary btn-outline" href="http://www.jamieafflerbach.com/project/deep-learning/" target="_blank" rel="noopener">
+<a class="btn btn-primary btn-outline" href="/project/deep-learning/" target="_blank" rel="noopener">
   Project
 </a>
 
