--- a/public/publication/fish_status_cons_letters_2017/index.html
+++ b/public/publication/fish_status_cons_letters_2017/index.html
@@ -20,7 +20,7 @@
   <meta name="description" content="The exploitation status of marine fisheries stocks worldwide is of critical importance for food security, ecosystem conservation, and fishery sustainability. Applying a suite of data-limited methods to global catch data, combined through an ensemble modeling approach, we provide quantitative estimates of exploitation status for 785 fish stocks. Fifty-six percent (439 stocks) are below BMSY and of these, 261 are estimated to be below 80% of the BMSY level. While the 178 stocks above 80% of BMSY are conventionally considered “fully exploited,” stocks staying at this level for many years, forego substantial yield. Our results enable managers to consider more detailed information than simply a categorization of stocks as “fully” or “over” exploited. Our approach is reproducible, allows consistent application to a broad range of stocks, and can be easily updated as new data become available. Applied on an ongoing basis, this approach can provide critical, more detailed information for resource management for more exploited fish stocks than currently available.">
 
   
-  <link rel="alternate" hreflang="en-us" href="http://www.jamieafflerbach.com/publication/fish_status_cons_letters_2017/">
+  <link rel="alternate" hreflang="en-us" href="/publication/fish_status_cons_letters_2017/">
 
   
 
@@ -74,15 +74,15 @@
   
 
   
-  <link rel="alternate" href="http://www.jamieafflerbach.com/index.xml" type="application/rss+xml" title="Jamie Afflerbach">
-  <link rel="feed" href="http://www.jamieafflerbach.com/index.xml" type="application/rss+xml" title="Jamie Afflerbach">
+  <link rel="alternate" href="/index.xml" type="application/rss+xml" title="Jamie Afflerbach">
+  <link rel="feed" href="/index.xml" type="application/rss+xml" title="Jamie Afflerbach">
   
 
   <link rel="manifest" href="/site.webmanifest">
   <link rel="icon" type="image/png" href="/img/icon.png">
   <link rel="apple-touch-icon" type="image/png" href="/img/icon-192.png">
 
-  <link rel="canonical" href="http://www.jamieafflerbach.com/publication/fish_status_cons_letters_2017/">
+  <link rel="canonical" href="/publication/fish_status_cons_letters_2017/">
 
   <meta property="twitter:card" content="summary_large_image">
   
@@ -90,7 +90,7 @@
   <meta property="twitter:creator" content="@jafflerbach">
   
   <meta property="og:site_name" content="Jamie Afflerbach">
-  <meta property="og:url" content="http://www.jamieafflerbach.com/publication/fish_status_cons_letters_2017/">
+  <meta property="og:url" content="/publication/fish_status_cons_letters_2017/">
   <meta property="og:title" content="Applying a New Ensemble Approach to Estimating Stock Status of Marine Fisheries Around the World | Jamie Afflerbach">
   <meta property="og:description" content="The exploitation status of marine fisheries stocks worldwide is of critical importance for food security, ecosystem conservation, and fishery sustainability. Applying a suite of data-limited methods to global catch data, combined through an ensemble modeling approach, we provide quantitative estimates of exploitation status for 785 fish stocks. Fifty-six percent (439 stocks) are below BMSY and of these, 261 are estimated to be below 80% of the BMSY level. While the 178 stocks above 80% of BMSY are conventionally considered “fully exploited,” stocks staying at this level for many years, forego substantial yield. Our results enable managers to consider more detailed information than simply a categorization of stocks as “fully” or “over” exploited. Our approach is reproducible, allows consistent application to a broad range of stocks, and can be easily updated as new data become available. Applied on an ongoing basis, this approach can provide critical, more detailed information for resource management for more exploited fish stocks than currently available.">
   <meta property="og:locale" content="en-us">
@@ -272,35 +272,35 @@
   <ul class="share">
     <li>
       <a class="twitter"
-         href="https://twitter.com/intent/tweet?text=Applying%20a%20New%20Ensemble%20Approach%20to%20Estimating%20Stock%20Status%20of%20Marine%20Fisheries%20Around%20the%20World&amp;url=http%3a%2f%2fwww.jamieafflerbach.com%2fpublication%2ffish_status_cons_letters_2017%2f"
+         href="https://twitter.com/intent/tweet?text=Applying%20a%20New%20Ensemble%20Approach%20to%20Estimating%20Stock%20Status%20of%20Marine%20Fisheries%20Around%20the%20World&amp;url=%2fpublication%2ffish_status_cons_letters_2017%2f"
          target="_blank" rel="noopener">
         <i class="fa fa-twitter"></i>
       </a>
     </li>
     <li>
       <a class="facebook"
-         href="https://www.facebook.com/sharer.php?u=http%3a%2f%2fwww.jamieafflerbach.com%2fpublication%2ffish_status_cons_letters_2017%2f"
+         href="https://www.facebook.com/sharer.php?u=%2fpublication%2ffish_status_cons_letters_2017%2f"
          target="_blank" rel="noopener">
         <i class="fa fa-facebook"></i>
       </a>
     </li>
     <li>
       <a class="linkedin"
-         href="https://www.linkedin.com/shareArticle?mini=true&amp;url=http%3a%2f%2fwww.jamieafflerbach.com%2fpublication%2ffish_status_cons_letters_2017%2f&amp;title=Applying%20a%20New%20Ensemble%20Approach%20to%20Estimating%20Stock%20Status%20of%20Marine%20Fisheries%20Around%20the%20World"
+         href="https://www.linkedin.com/shareArticle?mini=true&amp;url=%2fpublication%2ffish_status_cons_letters_2017%2f&amp;title=Applying%20a%20New%20Ensemble%20Approach%20to%20Estimating%20Stock%20Status%20of%20Marine%20Fisheries%20Around%20the%20World"
          target="_blank" rel="noopener">
         <i class="fa fa-linkedin"></i>
       </a>
     </li>
     <li>
       <a class="weibo"
-         href="http://service.weibo.com/share/share.php?url=http%3a%2f%2fwww.jamieafflerbach.com%2fpublication%2ffish_status_cons_letters_2017%2f&amp;title=Applying%20a%20New%20Ensemble%20Approach%20to%20Estimating%20Stock%20Status%20of%20Marine%20Fisheries%20Around%20the%20World"
+         href="http://service.weibo.com/share/share.php?url=%2fpublication%2ffish_status_cons_letters_2017%2f&amp;title=Applying%20a%20New%20Ensemble%20Approach%20to%20Estimating%20Stock%20Status%20of%20Marine%20Fisheries%20Around%20the%20World"
          target="_blank" rel="noopener">
         <i class="fa fa-weibo"></i>
       </a>
     </li>
     <li>
       <a class="email"
-         href="mailto:?subject=Applying%20a%20New%20Ensemble%20Approach%20to%20Estimating%20Stock%20Status%20of%20Marine%20Fisheries%20Around%20the%20World&amp;body=http%3a%2f%2fwww.jamieafflerbach.com%2fpublication%2ffish_status_cons_letters_2017%2f">
+         href="mailto:?subject=Applying%20a%20New%20Ensemble%20Approach%20to%20Estimating%20Stock%20Status%20of%20Marine%20Fisheries%20Around%20the%20World&amp;body=%2fpublication%2ffish_status_cons_letters_2017%2f">
         <i class="fa fa-envelope"></i>
       </a>
     </li>
@@ -392,7 +392,7 @@
 
 
 
-<a class="btn btn-primary btn-outline" href="http://www.jamieafflerbach.com/project/datalimited" target="_blank" rel="noopener">
+<a class="btn btn-primary btn-outline" href="/project/datalimited" target="_blank" rel="noopener">
   Project
 </a>
 
