--- a/public/publication_types/1/index.html
+++ b/public/publication_types/1/index.html
@@ -18,7 +18,7 @@
   <meta name="description" content="Marine Data Scientist">
 
   
-  <link rel="alternate" hreflang="en-us" href="http://www.jamieafflerbach.com/publication_types/1/">
+  <link rel="alternate" hreflang="en-us" href="/publication_types/1/">
 
   
 
@@ -72,15 +72,15 @@
   
 
   
-  <link rel="alternate" href="http://www.jamieafflerbach.com/index.xml" type="application/rss+xml" title="Jamie Afflerbach">
-  <link rel="feed" href="http://www.jamieafflerbach.com/index.xml" type="application/rss+xml" title="Jamie Afflerbach">
+  <link rel="alternate" href="/index.xml" type="application/rss+xml" title="Jamie Afflerbach">
+  <link rel="feed" href="/index.xml" type="application/rss+xml" title="Jamie Afflerbach">
   
 
   <link rel="manifest" href="/site.webmanifest">
   <link rel="icon" type="image/png" href="/img/icon.png">
   <link rel="apple-touch-icon" type="image/png" href="/img/icon-192.png">
 
-  <link rel="canonical" href="http://www.jamieafflerbach.com/publication_types/1/">
+  <link rel="canonical" href="/publication_types/1/">
 
   <meta property="twitter:card" content="summary_large_image">
   
@@ -88,7 +88,7 @@
   <meta property="twitter:creator" content="@jafflerbach">
   
   <meta property="og:site_name" content="Jamie Afflerbach">
-  <meta property="og:url" content="http://www.jamieafflerbach.com/publication_types/1/">
+  <meta property="og:url" content="/publication_types/1/">
   <meta property="og:title" content="1 | Jamie Afflerbach">
   <meta property="og:description" content="Marine Data Scientist">
   <meta property="og:locale" content="en-us">
@@ -263,7 +263,7 @@
   
   
   <div>
-    <h2><a href="http://www.jamieafflerbach.com/publication/cryptofauna_meps_2011/">Environmental determinants of motile cryptofauna on an eastern Pacific coral reef</a></h2>
+    <h2><a href="/publication/cryptofauna_meps_2011/">Environmental determinants of motile cryptofauna on an eastern Pacific coral reef</a></h2>
     <div class="article-style">
       
     </div>
