--- a/public/publication/coral_repro_2012/index.html
+++ b/public/publication/coral_repro_2012/index.html
@@ -20,7 +20,7 @@
   <meta name="description" content="Two zooxanthellate, scleractinian species present in the equatorial eastern Pacific, Psammocora stellata and Psammocora profundacella, were examined in terms of their reproductive biology and ecology at four study sites, non-upwelling (Caño Island, Costa Rica, and Uva Island, Panamá), upwelling (Gulf of Panamá, Panamá), and seasonally varying thermal environments (Galápagos Islands). Both species were gonochoric broadcast spawners lacking zooxanthellae in mature ova. Mature gametes and spawned gonads are present around full moon; however, no spawning was observed naturally or in outdoor aquaria. Mature gametes occurred in P. stellata at Caño Island for nearly 6 months, and year round at Uva Island, both non-upwelling sites. Reproductively active colonies occurred mostly in the warmer months in the Gulf of Panamá and Galápagos Islands. In the Galápagos Islands, where collecting effort was greatest for P. profundacella, mature gametes were also most prevalent during the warm season. Annual fecundity was high in both species, 1.3–1.8 × 104 ova cm−2 year−1 in P. stellata and 1.2–2.0 × 104 ova cm−2 year−1 in P. profundacella. Compared to other eastern Pacific corals, P. stellata was relatively resistant to ENSO-related bleaching and mortality, especially populations inhabiting deep (12–20 m) coral communities. Rapid recovery and persistence of Psammocora spp. can be attributed to several factors: (a) relative resistance to bleaching, (b) deep refuge populations, (c) broadcast spawning, (d) protracted seasonal reproduction, (e) high fecundity, and (f) asexual propagation.">
 
   
-  <link rel="alternate" hreflang="en-us" href="http://www.jamieafflerbach.com/publication/coral_repro_2012/">
+  <link rel="alternate" hreflang="en-us" href="/publication/coral_repro_2012/">
 
   
 
@@ -74,15 +74,15 @@
   
 
   
-  <link rel="alternate" href="http://www.jamieafflerbach.com/index.xml" type="application/rss+xml" title="Jamie Afflerbach">
-  <link rel="feed" href="http://www.jamieafflerbach.com/index.xml" type="application/rss+xml" title="Jamie Afflerbach">
+  <link rel="alternate" href="/index.xml" type="application/rss+xml" title="Jamie Afflerbach">
+  <link rel="feed" href="/index.xml" type="application/rss+xml" title="Jamie Afflerbach">
   
 
   <link rel="manifest" href="/site.webmanifest">
   <link rel="icon" type="image/png" href="/img/icon.png">
   <link rel="apple-touch-icon" type="image/png" href="/img/icon-192.png">
 
-  <link rel="canonical" href="http://www.jamieafflerbach.com/publication/coral_repro_2012/">
+  <link rel="canonical" href="/publication/coral_repro_2012/">
 
   <meta property="twitter:card" content="summary_large_image">
   
@@ -90,7 +90,7 @@
   <meta property="twitter:creator" content="@jafflerbach">
   
   <meta property="og:site_name" content="Jamie Afflerbach">
-  <meta property="og:url" content="http://www.jamieafflerbach.com/publication/coral_repro_2012/">
+  <meta property="og:url" content="/publication/coral_repro_2012/">
   <meta property="og:title" content="Reef coral reproduction in the equatorial eastern Pacific: Costa Rica, Panamá, and the Galápagos Islands (Ecuador). VII. Siderastreidae, Psammocora stellata and Psammocora profundacella. | Jamie Afflerbach">
   <meta property="og:description" content="Two zooxanthellate, scleractinian species present in the equatorial eastern Pacific, Psammocora stellata and Psammocora profundacella, were examined in terms of their reproductive biology and ecology at four study sites, non-upwelling (Caño Island, Costa Rica, and Uva Island, Panamá), upwelling (Gulf of Panamá, Panamá), and seasonally varying thermal environments (Galápagos Islands). Both species were gonochoric broadcast spawners lacking zooxanthellae in mature ova. Mature gametes and spawned gonads are present around full moon; however, no spawning was observed naturally or in outdoor aquaria. Mature gametes occurred in P. stellata at Caño Island for nearly 6 months, and year round at Uva Island, both non-upwelling sites. Reproductively active colonies occurred mostly in the warmer months in the Gulf of Panamá and Galápagos Islands. In the Galápagos Islands, where collecting effort was greatest for P. profundacella, mature gametes were also most prevalent during the warm season. Annual fecundity was high in both species, 1.3–1.8 × 104 ova cm−2 year−1 in P. stellata and 1.2–2.0 × 104 ova cm−2 year−1 in P. profundacella. Compared to other eastern Pacific corals, P. stellata was relatively resistant to ENSO-related bleaching and mortality, especially populations inhabiting deep (12–20 m) coral communities. Rapid recovery and persistence of Psammocora spp. can be attributed to several factors: (a) relative resistance to bleaching, (b) deep refuge populations, (c) broadcast spawning, (d) protracted seasonal reproduction, (e) high fecundity, and (f) asexual propagation.">
   <meta property="og:locale" content="en-us">
@@ -272,35 +272,35 @@
   <ul class="share">
     <li>
       <a class="twitter"
-         href="https://twitter.com/intent/tweet?text=Reef%20coral%20reproduction%20in%20the%20equatorial%20eastern%20Pacific%3a%20Costa%20Rica%2c%20Panam%c3%a1%2c%20and%20the%20Gal%c3%a1pagos%20Islands%20%28Ecuador%29.%20VII.%20Siderastreidae%2c%20Psammocora%20stellata%20and%20Psammocora%20profundacella.&amp;url=http%3a%2f%2fwww.jamieafflerbach.com%2fpublication%2fcoral_repro_2012%2f"
+         href="https://twitter.com/intent/tweet?text=Reef%20coral%20reproduction%20in%20the%20equatorial%20eastern%20Pacific%3a%20Costa%20Rica%2c%20Panam%c3%a1%2c%20and%20the%20Gal%c3%a1pagos%20Islands%20%28Ecuador%29.%20VII.%20Siderastreidae%2c%20Psammocora%20stellata%20and%20Psammocora%20profundacella.&amp;url=%2fpublication%2fcoral_repro_2012%2f"
          target="_blank" rel="noopener">
         <i class="fa fa-twitter"></i>
       </a>
     </li>
     <li>
       <a class="facebook"
-         href="https://www.facebook.com/sharer.php?u=http%3a%2f%2fwww.jamieafflerbach.com%2fpublication%2fcoral_repro_2012%2f"
+         href="https://www.facebook.com/sharer.php?u=%2fpublication%2fcoral_repro_2012%2f"
          target="_blank" rel="noopener">
         <i class="fa fa-facebook"></i>
       </a>
     </li>
     <li>
       <a class="linkedin"
-         href="https://www.linkedin.com/shareArticle?mini=true&amp;url=http%3a%2f%2fwww.jamieafflerbach.com%2fpublication%2fcoral_repro_2012%2f&amp;title=Reef%20coral%20reproduction%20in%20the%20equatorial%20eastern%20Pacific%3a%20Costa%20Rica%2c%20Panam%c3%a1%2c%20and%20the%20Gal%c3%a1pagos%20Islands%20%28Ecuador%29.%20VII.%20Siderastreidae%2c%20Psammocora%20stellata%20and%20Psammocora%20profundacella."
+         href="https://www.linkedin.com/shareArticle?mini=true&amp;url=%2fpublication%2fcoral_repro_2012%2f&amp;title=Reef%20coral%20reproduction%20in%20the%20equatorial%20eastern%20Pacific%3a%20Costa%20Rica%2c%20Panam%c3%a1%2c%20and%20the%20Gal%c3%a1pagos%20Islands%20%28Ecuador%29.%20VII.%20Siderastreidae%2c%20Psammocora%20stellata%20and%20Psammocora%20profundacella."
          target="_blank" rel="noopener">
         <i class="fa fa-linkedin"></i>
       </a>
     </li>
     <li>
       <a class="weibo"
-         href="http://service.weibo.com/share/share.php?url=http%3a%2f%2fwww.jamieafflerbach.com%2fpublication%2fcoral_repro_2012%2f&amp;title=Reef%20coral%20reproduction%20in%20the%20equatorial%20eastern%20Pacific%3a%20Costa%20Rica%2c%20Panam%c3%a1%2c%20and%20the%20Gal%c3%a1pagos%20Islands%20%28Ecuador%29.%20VII.%20Siderastreidae%2c%20Psammocora%20stellata%20and%20Psammocora%20profundacella."
+         href="http://service.weibo.com/share/share.php?url=%2fpublication%2fcoral_repro_2012%2f&amp;title=Reef%20coral%20reproduction%20in%20the%20equatorial%20eastern%20Pacific%3a%20Costa%20Rica%2c%20Panam%c3%a1%2c%20and%20the%20Gal%c3%a1pagos%20Islands%20%28Ecuador%29.%20VII.%20Siderastreidae%2c%20Psammocora%20stellata%20and%20Psammocora%20profundacella."
          target="_blank" rel="noopener">
         <i class="fa fa-weibo"></i>
       </a>
     </li>
     <li>
       <a class="email"
-         href="mailto:?subject=Reef%20coral%20reproduction%20in%20the%20equatorial%20eastern%20Pacific%3a%20Costa%20Rica%2c%20Panam%c3%a1%2c%20and%20the%20Gal%c3%a1pagos%20Islands%20%28Ecuador%29.%20VII.%20Siderastreidae%2c%20Psammocora%20stellata%20and%20Psammocora%20profundacella.&amp;body=http%3a%2f%2fwww.jamieafflerbach.com%2fpublication%2fcoral_repro_2012%2f">
+         href="mailto:?subject=Reef%20coral%20reproduction%20in%20the%20equatorial%20eastern%20Pacific%3a%20Costa%20Rica%2c%20Panam%c3%a1%2c%20and%20the%20Gal%c3%a1pagos%20Islands%20%28Ecuador%29.%20VII.%20Siderastreidae%2c%20Psammocora%20stellata%20and%20Psammocora%20profundacella.&amp;body=%2fpublication%2fcoral_repro_2012%2f">
         <i class="fa fa-envelope"></i>
       </a>
     </li>
@@ -388,7 +388,7 @@
 
 
 
-<a class="btn btn-primary btn-outline" href="http://www.jamieafflerbach.com/project/deep-learning/" target="_blank" rel="noopener">
+<a class="btn btn-primary btn-outline" href="/project/deep-learning/" target="_blank" rel="noopener">
   Project
 </a>
 
