--- a/public/404.html
+++ b/public/404.html
@@ -262,6 +262,10 @@
   </ul>
   
   <ul>
+    <li><a href="./post/santa-barbara-twitter/">Testing</a></li>
+  </ul>
+  
+  <ul>
     <li><a href="./post/cropping-rasters-down-to-size/">Cropping rasters down to size</a></li>
   </ul>
   
