--- a/public/404.html
+++ b/public/404.html
@@ -258,11 +258,11 @@
   <h2>Posts</h2>
   
   <ul>
-    <li><a href="./post/santa-barbara-twitter/">Santa Barbara&#39;s nature-based &#39;Sense of Place&#39;, as told by twitter</a></li>
+    <li><a href="./post/testing/">Testing</a></li>
   </ul>
   
   <ul>
-    <li><a href="./post/santa-barbara-twitter/">Testing</a></li>
+    <li><a href="./post/santa-barbara-twitter/">Santa Barbara&#39;s nature-based &#39;Sense of Place&#39;, as told by twitter</a></li>
   </ul>
   
   <ul>
