--- a/public/index.html
+++ b/public/index.html
@@ -1429,7 +1429,7 @@ library(sf)</code></pre>
   
   <span class="middot-divider"></span>
   <span class="article-reading-time">
-    4825 min read
+    4853 min read
   </span>
   
 
@@ -1454,7 +1454,7 @@ library(sf)</code></pre>
   <div class="article-style" itemprop="articleBody">
     
     Summary The aim of this project was to evaluate whether or not geotagged social media data can be useful in providing insight into a region’s “Sense of Place” using Santa Barbara as a case study.
-Sense of Place can be defined as the connection people feel to their geographic surroundings, including both the natural and built environment. Locations with a strong sense of place often have a strong identity felt by both locals and visitors.
+Sense of Place can be defined as the connection people feel to their geographic surroundings, including both the natural and built environment.
     
   </div>
   <p class="read-more" itemprop="mainEntityOfPage">
