fixed image width

--- a/public/index.html
+++ b/public/index.html
@@ -1359,8 +1359,8 @@ I also lead and support data science training efforts for environmental scientis
   </h3>
   <div class="article-style" itemprop="articleBody">
     
-    Summary The aim of this project was to evaluate whether or not geotagged social media data can be useful in providing insight into a region’s “Sense of Place” using Santa Barbara as a case study.
-Sense of Place can be defined as the connection people feel to their geographic surroundings, including both the natural and built environment.
+    The aim of this project was to evaluate whether or not geotagged social media data can be useful in providing insight into a region’s “Sense of Place” using Santa Barbara as a case study.
+Sense of Place can be defined as the connection people feel to their geographic surroundings, including both the natural and built environment. Locations with a strong sense of place often have a strong identity felt by both locals and visitors.
     
   </div>
   <p class="read-more" itemprop="mainEntityOfPage">
