--- a/public/index.html
+++ b/public/index.html
@@ -1335,7 +1335,7 @@ I also lead and support data science training efforts for environmental scientis
   
   <span class="middot-divider"></span>
   <span class="article-reading-time">
-    4838 min read
+    4841 min read
   </span>
   
 
@@ -1360,7 +1360,7 @@ I also lead and support data science training efforts for environmental scientis
   <div class="article-style" itemprop="articleBody">
     
     The aim of this project was to evaluate whether or not geotagged social media data can be useful in providing insight into a region’s “Sense of Place” using Santa Barbara as a case study.
-Sense of Place can be defined as the connection people feel to their geographic surroundings, including both the natural and built environment. Locations with a strong sense of place often have a strong identity felt by both locals and visitors.
+How and where people experience and value coastal and ocean areas can reveal places we deem special. Sense of place can be defined as the connection people feel to their geographic surroundings, including both the natural and built environment.
     
   </div>
   <p class="read-more" itemprop="mainEntityOfPage">
