added dashboard and app buttons to hugo

--- a/public/project/oceanhealthindex/index.html
+++ b/public/project/oceanhealthindex/index.html
@@ -372,6 +372,8 @@
 </a>
 
 
+
+
 <a class="btn btn-primary btn-outline btn-xs" href="https://github.com/OHI-Science/ohi-global/releases" target="_blank" rel="noopener">
   Dataset
 </a>
@@ -424,6 +426,12 @@
 
 
 
+<a class="btn btn-primary btn-outline btn-xs" href="https://ohi-northeast.shinyapps.io/ne-dashboard/" target="_blank" rel="noopener">
+  Dashboard
+</a>
+
+
+
 
 <a class="btn btn-primary btn-outline btn-xs" href="/project/oceanhealthindex/">
   Project
@@ -468,6 +476,8 @@
 
 
 
+
+
 <a class="btn btn-primary btn-outline btn-xs" href="/project/oceanhealthindex/">
   Project
 </a>
@@ -507,6 +517,8 @@
 
 
 
+
+
 <a class="btn btn-primary btn-outline btn-xs" href="/project/oceanhealthindex/">
   Project
 </a>
@@ -538,6 +550,8 @@
 <a class="btn btn-primary btn-outline btn-xs" href="https://link.springer.com/article/10.1007/s10113-018-1395-6" target="_blank" rel="noopener">
   PDF
 </a>
+
+
 
 
 
