--- a/public/publication/index.html
+++ b/public/publication/index.html
@@ -396,6 +396,12 @@
 
 
 
+<a class="btn btn-primary btn-outline btn-xs" href="https://ohi-northeast.shinyapps.io/ne-dashboard/" target="_blank" rel="noopener">
+  Dashboard
+</a>
+
+
+
 
 <a class="btn btn-primary btn-outline btn-xs" href="/project/oceanhealthindex/">
   Project
@@ -446,6 +452,8 @@
 
 
 
+
+
 <a class="btn btn-primary btn-outline btn-xs" href="/project/oceanhealthindex/">
   Project
 </a>
@@ -483,6 +491,8 @@
 <a class="btn btn-primary btn-outline btn-xs" href="https://www.sciencedirect.com/science/article/abs/pii/S0960982219308863" target="_blank" rel="noopener">
   PDF
 </a>
+
+
 
 
 
@@ -538,6 +548,8 @@
 </a>
 
 
+
+
 <a class="btn btn-primary btn-outline btn-xs" href="https://knb.ecoinformatics.org/view/doi:10.5063/F12B8WBS" target="_blank" rel="noopener">
   Dataset
 </a>
@@ -577,6 +589,8 @@
 <a class="btn btn-primary btn-outline btn-xs" href="https://onlinelibrary.wiley.com/doi/full/10.1111/faf.12346" target="_blank" rel="noopener">
   PDF
 </a>
+
+
 
 
 
@@ -630,6 +644,8 @@
 
 
 
+
+
 <a class="btn btn-primary btn-outline btn-xs" href="/project/datalimited/">
   Project
 </a>
@@ -667,6 +683,8 @@
 <a class="btn btn-primary btn-outline btn-xs" href="https://link.springer.com/article/10.1007/s10113-018-1395-6" target="_blank" rel="noopener">
   PDF
 </a>
+
+
 
 
 
@@ -720,6 +738,8 @@
 
 
 
+
+
 <a class="btn btn-primary btn-outline btn-xs" href="/project/cumulative-impacts/">
   Project
 </a>
@@ -765,6 +785,8 @@
 <a class="btn btn-primary btn-outline btn-xs" href="https://github.com/OHI-Science/ohi-global" target="_blank" rel="noopener">
   Code
 </a>
+
+
 
 
 <a class="btn btn-primary btn-outline btn-xs" href="https://github.com/OHI-Science/ohi-global/releases" target="_blank" rel="noopener">
@@ -822,6 +844,8 @@
 
 
 
+
+
 <a class="btn btn-primary btn-outline btn-xs" href="http://www.jamiecmontgomery.com/project/oceanhealthindex" target="_blank" rel="noopener">
   Project
 </a>
@@ -867,6 +891,8 @@
 <a class="btn btn-primary btn-outline btn-xs" href="https://github.com/OHI-Science/IUCN-AquaMaps" target="_blank" rel="noopener">
   Code
 </a>
+
+
 
 
 
@@ -924,6 +950,8 @@
 
 
 
+
+
 <a class="btn btn-primary btn-outline btn-xs" href="http://www.jamiecmontgomery.com/project/datalimited" target="_blank" rel="noopener">
   Project
 </a>
@@ -969,6 +997,8 @@
 <a class="btn btn-primary btn-outline btn-xs" href="https://github.com/datalimited/ensembles" target="_blank" rel="noopener">
   Code
 </a>
+
+
 
 
 
@@ -1024,6 +1054,8 @@
 
 
 
+
+
 </p>
 </div>
 
@@ -1051,6 +1083,8 @@
 <a class="btn btn-primary btn-outline btn-xs" href="http://www.int-res.com/articles/meps2013/495/m495p233.pdf" target="_blank" rel="noopener">
   PDF
 </a>
+
+
 
 
 
@@ -1100,6 +1134,8 @@
 
 
 
+
+
 <a class="btn btn-primary btn-outline btn-xs" href="http://www.jamiecmontgomery.com/project/deep-learning/" target="_blank" rel="noopener">
   Project
 </a>
@@ -1137,6 +1173,8 @@
 <a class="btn btn-primary btn-outline btn-xs" href="https://repository.lib.fit.edu/handle/11141/332" target="_blank" rel="noopener">
   PDF
 </a>
+
+
 
 
 
