--- a/public/publication/ohine/index.html
+++ b/public/publication/ohine/index.html
@@ -396,6 +396,12 @@
 
 
 
+<a class="btn btn-primary btn-outline" href="https://ohi-northeast.shinyapps.io/ne-dashboard/" target="_blank" rel="noopener">
+  Dashboard
+</a>
+
+
+
 
 <a class="btn btn-primary btn-outline" href="/project/oceanhealthindex/">
   Project
