added seaweed code

--- a/public/publication/index.html
+++ b/public/publication/index.html
@@ -496,6 +496,10 @@
 
 
 
+<a class="btn btn-primary btn-outline btn-xs" href="https://github.com/CART-sci/seaweed" target="_blank" rel="noopener">
+  Code
+</a>
+
 
 
 
