--- a/public/publication/seaweed/index.html
+++ b/public/publication/seaweed/index.html
@@ -390,6 +390,10 @@
 
 
 
+<a class="btn btn-primary btn-outline" href="https://github.com/CART-sci/seaweed" target="_blank" rel="noopener">
+  Code
+</a>
+
 
 
 
